--- a/src/Components/projects/index.scss
+++ b/src/Components/projects/index.scss
@@ -1,54 +1,51 @@
+@import '../../Consts/variables.scss';
+
 .container{
-   background: lightgray;
+   background: $primary-variant;
    padding: 50px;
    align-items: center;
+   display: flex;
+   justify-content: space-between;
 
    .container__div{
         display: inline-block;
-        background: lightgreen;
+        background: $primary;
         margin: 10px;
-        padding: 10px;
-        border-radius: 20px;
-        max-width: 28%;
+        min-width: 28%;
         max-height: 300px;
         vertical-align: top;
-
+        border-radius: 10px;
+        padding: 5px;
         img{
-            width: 75px;
-            height: 75px;
-            border-radius: 50%;
+
+            max-width: 100%;
+            height: 80%;
             align-items: center;
             display: block;
             margin: auto;
+            border-radius: 10px;
         }
 
         h1{
             text-align: center;
             font-size: 20px;
+            color: #fff;
         }
 
-        p{
-            margin: 15px;
-            height: 145px;
-            overflow: auto;
-            text-align: justify;
-        }
+        
     }
 }
 
 @media screen and (max-width: 1200px) {
     .container{
+        display: inline-block;
+        width: 100%;
         padding: 3%;
         .container__div{
             display: inline-block;
             margin: 0;
             margin: 5px;
-            max-width: 46%;
-
-        }
-
-
-        p{
+            min-width: 45%;
 
         }
     }
@@ -56,19 +53,18 @@
 
 @media screen and (max-width: 700px) {
     .container{
-        padding: 2%;
+        display: inline-block;
+        width: 100%;
+        padding: 0;
         .container__div{
             display: block;
-            margin: 0;
-            max-width: 100%;
             margin: 5px;
+            max-width: 100%;
+
 
         }
 
 
-        p{
-
-        }
     }
 }
 
