--- a/src/Components/projects/index.scss
+++ b/src/Components/projects/index.scss
@@ -6,6 +6,7 @@
    align-items: center;
    display: flex;
    justify-content: space-between;
+   height: 100vh;
 
    .container__div{
         display: inline-block;
@@ -16,14 +17,16 @@
         vertical-align: top;
         border-radius: 10px;
         padding: 5px;
-        img{
+        box-shadow: 5px 5px 5px 1px gray;
 
+        img{
             max-width: 100%;
-            height: 80%;
+            height: 80%;    
             align-items: center;
             display: block;
             margin: auto;
             border-radius: 10px;
+            cursor: pointer;
         }
 
         h1{
@@ -35,6 +38,34 @@
         
     }
 }
+
+.dialog-container{
+    display: block;
+
+    .dialog-container__images{
+        margin: auto;
+        align-items: center;
+        width: 100%;
+
+        .sliderimg{
+            width: 50%;
+            object-fit: contain;
+            margin: auto;
+            border-radius: 5px;
+            box-shadow: 5px 5px 5px 1px gray;
+        }
+    }
+}
+
+.alice-carousel ul li img{
+    width: 100%;
+    object-fit: cover;
+    align-items: center;
+    display: block;
+    margin: auto;
+}
+
+
 
 @media screen and (max-width: 1200px) {
     .container{
@@ -49,6 +80,19 @@
 
         }
     }
+
+    .images-container{
+        width: 100%;
+        display: inline-block;
+    
+        img{
+            max-width: 40%;
+            display: block;
+            margin: 5px;
+            object-fit: contain;
+            box-shadow: 2px 2px 2px 0.5px gray;
+        }
+    }
 }
 
 @media screen and (max-width: 700px) {
@@ -60,11 +104,23 @@
             display: block;
             margin: 5px;
             max-width: 100%;
-
-
         }
+    }
 
+    .dialog-container{
+        
+        .dialog-container__images{
 
+            
+            .sliderimg{
+                width: 100%;
+                object-fit: contain;
+                margin: auto;
+            }
+
+            
+            
+        }
     }
 }
 
