--- a/src/Consts/variables.scss
+++ b/src/Consts/variables.scss
@@ -1,6 +1,6 @@
 $primary: #1d2e4d;
 $accent: #85a8e5;
-$primary-variant: #e6e7e8;
+$primary-variant: #373435;
 $accent-variant: #496699;
 $black: #000000;
 $white: #ffffff;
