--- a/src/Components/projects/index.scss
+++ b/src/Components/projects/index.scss
@@ -20,7 +20,7 @@ body{
         background: $primary;
         margin: 10px;
         min-width: 30%;
-        max-height: 300px;
+        max-height: 200px;
         vertical-align: top;
         border-radius: 10px;
         padding: 5px;
@@ -28,12 +28,13 @@ body{
 
         img{
             max-width: 100%;
-            height: 80%;    
+            height: 150px;    
             align-items: center;
             display: block;
             margin: auto;
             border-radius: 10px;
             cursor: pointer;
+            object-fit: contain;
         }
 
         h1{
