--- a/src/Components/Common/Navbar/index.scss
+++ b/src/Components/Common/Navbar/index.scss
@@ -28,11 +28,11 @@
     }
 
     .nav__li:hover{
-        color: $accent;
+        color: $accent-yellow;
     }
 
     .nav__li:hover > a{
-        color: $accent;
+        color: $accent-yellow;
     }
 
     .nav__li a{
