--- a/src/Consts/variables.scss
+++ b/src/Consts/variables.scss
@@ -2,5 +2,6 @@ $primary: #1d2e4d;
 $accent: #85a8e5;
 $primary-variant: #373435;
 $accent-variant: #496699;
+$accent-yellow: #e5d457;
 $black: #000000;
 $white: #ffffff;
