--- a/src/Styles/base/_base.scss
+++ b/src/Styles/base/_base.scss
@@ -4,8 +4,18 @@
     padding: 0;
 }
 
+
 main {
     width: 100%;
+}
+
+.loader {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    padding-top: 10%;
+    width: 100%;
+    vertical-align: center;
 }
 
 .mt-1 {
