--- a/src/Styles/base/_settings.scss
+++ b/src/Styles/base/_settings.scss
@@ -4,4 +4,4 @@ $primary-variant: #373435;
 $accent-variant: #496699;
 $accent-yellow: #e5d457;
 $black: #000000;
-$white: #ffffff;
+$white: #E6E7E8;
