--- a/src/Styles/components/index/_presentation.scss
+++ b/src/Styles/components/index/_presentation.scss
@@ -49,7 +49,7 @@
         flex-direction: row;
         padding: 10%;
         padding-top: 20vh;
-        min-height: 100vh ;
+        height: 55vh;
 
         .main__circle {
             width: 35%;
