--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -8,3 +8,5 @@
 @import './components/index/carrusel';
 
 @import './components/projects/projects';
+
+@import './components/linktree/linktreeScreen';
